fix: update swagger docs
