# docs/swagger.json
@@ -9,14 +9,106 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/bike": {
-            "get": {
-                "description": "get all bikes",
+        "/auth/sign-in": {
+            "post": {
+                "description": "Authenticate user",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "bikes"
+                    "auth"
+                ],
+                "summary": "Sign in",
+                "parameters": [
+                    {
+                        "description": "Sign in payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.SignInParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/auth.SignInResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/sign-up": {
+            "post": {
+                "description": "Create a new user account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Sign up",
+                "parameters": [
+                    {
+                        "description": "Sign up payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.SignUpParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/repo.CreateUserRow"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/bike": {
+            "get": {
+                "description": "Get all bikes",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bike"
                 ],
                 "summary": "List bikes",
                 "responses": {
@@ -25,14 +117,20 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/bike.Bike"
+                                "$ref": "#/definitions/repo.Bike"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
             },
             "post": {
-                "description": "create a new bike",
+                "description": "Create a new bike",
                 "consumes": [
                     "application/json"
                 ],
@@ -40,17 +138,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "bikes"
+                    "bike"
                 ],
                 "summary": "Create bike",
                 "parameters": [
                     {
                         "description": "Bike payload",
-                        "name": "bike",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/bike.CreateBike"
+                            "$ref": "#/definitions/repo.CreateBikeParams"
                         }
                     }
                 ],
@@ -58,17 +156,17 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/bike.Bike"
+                            "$ref": "#/definitions/repo.Bike"
                         }
                     },
                     "422": {
-                        "description": "invalid request",
+                        "description": "Unprocessable Entity",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "unexpected error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -78,13 +176,14 @@
         },
         "/bike/{id}": {
             "get": {
+                "description": "Get a bike by ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "bikes"
+                    "bike"
                 ],
-                "summary": "Get bike by ID",
+                "summary": "Find bike by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -98,11 +197,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/bike.Bike"
+                            "$ref": "#/definitions/repo.Bike"
                         }
                     },
                     "422": {
-                        "description": "invalid id",
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -110,7 +215,7 @@
                 }
             },
             "put": {
-                "description": "update an existing bike",
+                "description": "Update a bike",
                 "consumes": [
                     "application/json"
                 ],
@@ -118,7 +223,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "bikes"
+                    "bike"
                 ],
                 "summary": "Update bike",
                 "parameters": [
@@ -131,11 +236,11 @@
                     },
                     {
                         "description": "Bike payload",
-                        "name": "bike",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/bike.UpdateBike"
+                            "$ref": "#/definitions/repo.UpdateBikeParams"
                         }
                     }
                 ],
@@ -143,17 +248,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/bike.Bike"
+                            "$ref": "#/definitions/repo.Bike"
                         }
                     },
                     "422": {
-                        "description": "invalid id or request",
+                        "description": "Unprocessable Entity",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "unexpected error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -163,11 +268,70 @@
         }
     },
     "definitions": {
-        "bike.Bike": {
+        "auth.SignInParams": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.SignInResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.SignUpParams": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "pgtype.InfinityModifier": {
+            "type": "integer",
+            "format": "int32",
+            "enum": [
+                1,
+                0,
+                -1
+            ],
+            "x-enum-varnames": [
+                "Infinity",
+                "Finite",
+                "NegativeInfinity"
+            ]
+        },
+        "pgtype.Timestamp": {
+            "type": "object",
+            "properties": {
+                "infinityModifier": {
+                    "$ref": "#/definitions/pgtype.InfinityModifier"
+                },
+                "time": {
+                    "description": "Time zone will be ignored when encoding to PostgreSQL.",
+                    "type": "string"
+                },
+                "valid": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "repo.Bike": {
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "$ref": "#/definitions/pgtype.Timestamp"
                 },
                 "id": {
                     "type": "integer"
@@ -179,14 +343,14 @@
                     "type": "integer"
                 },
                 "rented_at": {
-                    "type": "string"
+                    "$ref": "#/definitions/pgtype.Timestamp"
                 },
                 "rented_until": {
-                    "type": "string"
+                    "$ref": "#/definitions/pgtype.Timestamp"
                 }
             }
         },
-        "bike.CreateBike": {
+        "repo.CreateBikeParams": {
             "type": "object",
             "properties": {
                 "model": {
@@ -196,16 +360,30 @@
                     "type": "integer"
                 },
                 "rented_at": {
-                    "type": "string"
+                    "$ref": "#/definitions/pgtype.Timestamp"
                 },
                 "rented_until": {
-                    "type": "string"
+                    "$ref": "#/definitions/pgtype.Timestamp"
                 }
             }
         },
-        "bike.UpdateBike": {
+        "repo.CreateUserRow": {
             "type": "object",
             "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "repo.UpdateBikeParams": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
                 "model": {
                     "type": "string"
                 },
@@ -213,10 +391,10 @@
                     "type": "integer"
                 },
                 "rented_at": {
-                    "type": "string"
+                    "$ref": "#/definitions/pgtype.Timestamp"
                 },
                 "rented_until": {
-                    "type": "string"
+                    "$ref": "#/definitions/pgtype.Timestamp"
                 }
             }
         }
